Remove dependency on httpclient